# wtp-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
npm/base/: package.json
npm/platform/darwin-arm64/: package.json
npm/platform/darwin-x64/: package.json
npm/platform/linux-arm64/: package.json
npm/platform/linux-x64/: package.json
npm/platform/win32-x64/: package.json
scripts/: check-version-sync.js  package-release.ps1  package-release.sh  resolve-version.sh
skills/git-worktree-plus-with-mcp/: SKILL.md
src/: config.rs  errors.rs  lib.rs  main.rs  resources.rs  security.rs  server.rs  types.rs  wtp.rs  wtp_binary.rs  wtp_parser.rs  wtp_runner.rs
src/tools/: mod.rs  utility.rs  worktree.rs
tests/: error_mapping.rs  integration.rs  server.rs  stubbed.rs
