[package]
name = "wtp-mcp-rs"
version = "0.1.0"
edition = "2024"
authors = ["bnomei"]
description = "MCP server for WTP - Git Worktree Plus"
license = "MIT"
repository = "https://github.com/bnomei/wtp-mcp"
homepage = "https://github.com/bnomei/wtp-mcp"
documentation = "https://docs.rs/wtp-mcp-rs"
readme = "README.md"
keywords = ["mcp", "git", "worktree", "wtp", "agent"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "wtp_mcp_rs"
path = "src/lib.rs"

[[bin]]
name = "wtp-mcp-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rmcp = { version = "0.14", default-features = false, features = ["base64", "server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry"] }
thiserror = "2"
dirs = "6"
which = "8"
serde_yaml = "0.9"

[dev-dependencies]
rstest = "0.26"
tempfile = "3"

[[test]]
name = "integration"
path = "tests/integration.rs"
